[gd_scene format=3 uid="uid://cbmi1m68nx37s"]

[ext_resource type="FontFile" uid="uid://bcr6dsok2dav8" path="res://assets/fonts/Lequire.otf" id="1_av3ar"]
[ext_resource type="Script" uid="uid://kx3lq4x45t6a" path="res://scenes/ui/lose_menu.gd" id="1_s6jrv"]
[ext_resource type="PackedScene" uid="uid://62g126qpnys7" path="res://scenes/ui/scene_transition.tscn" id="2_s6jrv"]
[ext_resource type="Texture2D" uid="uid://drgb0j03hk0oa" path="res://assets/UI/buttons/ui_buttons_idle.png" id="3_lw5g7"]
[ext_resource type="Texture2D" uid="uid://grafoxwbhg1q" path="res://assets/UI/buttons/ui_buttons_click.png" id="4_np0om"]
[ext_resource type="Texture2D" uid="uid://ww7jde3alxw" path="res://assets/UI/buttons/ui_buttons_hover.png" id="5_cagcv"]

[node name="lose_scene" type="Control" unique_id=934397654]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_s6jrv")

[node name="ColorRect" type="ColorRect" parent="." unique_id=1321620429]
z_index = -10
layout_mode = 0
offset_right = 1283.0
offset_bottom = 719.0
color = Color(0.105882354, 0.21960784, 0.29411766, 1)

[node name="RichTextLabel2" type="RichTextLabel" parent="." unique_id=56672880]
layout_mode = 0
offset_left = 36.0
offset_top = 181.0
offset_right = 271.0
offset_bottom = 442.0
theme_override_fonts/normal_font = ExtResource("1_av3ar")
theme_override_font_sizes/normal_font_size = 200
text = ":("
horizontal_alignment = 1

[node name="RichTextLabel" type="RichTextLabel" parent="." unique_id=291888820]
layout_mode = 0
offset_left = 8.0
offset_top = 65.0
offset_right = 1280.0
offset_bottom = 179.0
theme_override_fonts/normal_font = ExtResource("1_av3ar")
theme_override_font_sizes/normal_font_size = 50
text = "Blue screen of death 0x000000039"
horizontal_alignment = 1

[node name="scene_transition" parent="." unique_id=242247502 instance=ExtResource("2_s6jrv")]
modulate = Color(0, 0, 0, 1)
layout_mode = 0
color = Color(0, 0, 0, 1)

[node name="Timer" type="Timer" parent="scene_transition" unique_id=1072673684]

[node name="RestartButton" type="TextureButton" parent="." unique_id=1292621950]
layout_mode = 0
offset_left = 273.0
offset_top = 512.0
offset_right = 573.0
offset_bottom = 572.0
texture_normal = ExtResource("3_lw5g7")
texture_pressed = ExtResource("4_np0om")
texture_hover = ExtResource("5_cagcv")
ignore_texture_size = true
stretch_mode = 5

[node name="Label" type="Label" parent="RestartButton" unique_id=883928204]
layout_mode = 0
offset_left = 31.0
offset_top = 3.0
offset_right = 269.0
offset_bottom = 57.0
theme_override_colors/font_color = Color(0.1764706, 0.6666667, 0.88235295, 1)
theme_override_fonts/font = ExtResource("1_av3ar")
theme_override_font_sizes/font_size = 30
text = "restart.exe"
vertical_alignment = 2

[node name="MainMenuButton" type="TextureButton" parent="." unique_id=2022141669]
layout_mode = 0
offset_left = 702.0
offset_top = 512.0
offset_right = 1002.0
offset_bottom = 572.0
texture_normal = ExtResource("3_lw5g7")
texture_pressed = ExtResource("4_np0om")
texture_hover = ExtResource("5_cagcv")
ignore_texture_size = true
stretch_mode = 5

[node name="Label" type="Label" parent="MainMenuButton" unique_id=1415252139]
layout_mode = 0
offset_left = 31.0
offset_top = 3.0
offset_right = 269.0
offset_bottom = 57.0
theme_override_colors/font_color = Color(0.1764706, 0.6666667, 0.88235295, 1)
theme_override_fonts/font = ExtResource("1_av3ar")
theme_override_font_sizes/font_size = 30
text = "main menu.gif"
vertical_alignment = 2

[connection signal="timeout" from="scene_transition/Timer" to="." method="_on_timer_timeout"]
[connection signal="pressed" from="RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="MainMenuButton" to="." method="_on_main_menu_button_pressed"]
